updated test data because unit test was failing due to half-baked test data rather than a misunderstanding of flatmap.  Still, the exercise was useful because it helped me to dig into what the flatmap was doing and identify where my thinking was flawed.